<resources>
    <string name="app_name">RecipeFinder</string>

    <!-- MainActivity - layout -->

    <string name="main_activity_mainText">What do you have in your fridge?</string>
    <string name="main_activity_inputHintText">Enter first ingredient</string>
    <string name="main_activity_inputSecondHintText">Enter next ingredient</string>
    <string name="main_activity_buttonFindMeal">Find a recipe!</string>
    <string name="main_activity_user_guide">1. Type all ingredients you have\n\n2. Click on the button below\n\n3. The algorithm will find recipes that use as many of the given ingredients as possible and require as few additional ingredients as possible</string>

    <!-- MainActivity - validations -->

    <string name="validation_noIngredients">Enter at least one ingredient!</string>

    <!-- RecipeListActivity - layout -->

    <string name="recipes_list_activity_quota_left">Points left: %.1f</string>

    <!-- IngredientNameValidation - validations -->

    <string name="validation_empty">Field cannot be empty!</string>
    <string name="validation_whitespaces">Too many whitespaces!</string>
    <string name="validation_digits">Ingredient cannot contain any digits!</string>
    <string name="validation_specChar">Ingredient cannot contain any special characters!</string>
    <string name="validation_char">Name too short!</string>
    <string name="validation_long">Name too long!</string>

    <!-- RecipeListAdapter -->

    <string name="recipes_list_activity_dialog_title">Your plan: FREE</string>
    <string name="recipes_list_activity_dialog_message">Every API call you make costs a certain amount of points: every request is 1 point and 0.01 points per result returned. There is only 150 points to use per day. Use them wisely.</string>
    <string name="recipes_list_activity_dialog_error">ERROR</string>


    <!-- RecipesListAdapter -->

    <string name="recipes_list_adapter_ingredients_ok">✅ You have all the ingredients needed to make this recipe!</string>
    <string name="recipes_list_adapter_ingredients_nok">You need 1 more ingredient for this recipe:</string>
    <string name="recipes_list_adapter_ingredients_nok_plural">You need %d more ingredients for this recipe:</string>

    <!-- activity_recipe_details -->

    <string name="summary_title">Summary:</string>
    <string name="preparation_title">Preparation:</string>
    <string name="source_title">For more information check the source:</string>
    <string name="get_similar_recipes_button">Search for similar recipes</string>

    <!-- activity_recipe_details_time_servings_section -->

    <string name="recipe_ready_in_minutes">%d min.</string>
    <string name="resource_strings_recipe_servings_singular">%d serving</string>
    <string name="resource_strings_recipe_servings_plural">%d servings</string>

    <!-- activity_recipe_details_time_servings_section - spinner -->

    <string-array name="servings">
        <item>0.5 serving</item>
        <item>1 serving</item>
        <item>2 servings</item>
        <item>3 servings</item>
        <item>custom</item>
    </string-array>

    <!-- activity_recipe_details_nutritional_section -->

    <string name="resource_strings_nutritional_title_singular">Nutritional information for %d serving</string>
    <string name="resource_strings_nutritional_title_plural">Nutritional information for %d servings</string>
    <string name="kcal">kcal</string>
    <string name="nutritional_details_title">Details:</string>
    <string name="nutritional_kcal">647</string>
    <string name="nutritional_fat">Total fat 36g (30%)</string>
    <string name="nutritional_carbs">Carbs 18g (34%)</string>
    <string name="nutritional_prot">Proteins 23g (46%)</string>
    <string name="nutritional_list">[FAKE DATA]\nProtein 23g (48% of daily need)\nVitamin B3 6mg (33% od daily need)\nVitamin B12 1ug (33% of daily need)\nZinc 4 mg (29% of daily need)\nProtein 23g (48% of daily need)\nVitamin B3 6mg (33% od daily need)\nVitamin B12 1ug (33% of daily need)\nZinc 4 mg (29% of daily need)\nProtein 23g (48% of daily need)\nVitamin B3 6mg (33% od daily need)\nVitamin B12 1ug (33% of daily need)\nZinc 4 mg (29% of daily need)\nProtein 23g (48% of daily need)\nVitamin B3 6mg (33% od daily need)\nVitamin B12 1ug (33% of daily need)\nZinc 4 mg (29% of daily need)</string>

    <!-- activity_recipe_details_ingredients_section -->

    <string name="ingredients_title">Ingredients:</string>
    <string name="imperial">Imperial</string>
    <string name="metric">Metric</string>

    <!-- activity_error_screen -->

    <string name="error_screen_error_button">Go back</string>
    <string name="error_screen_error_title">Something went wrong…</string>
    <string name="error_message">Check your internet connection and try again</string>

    <!-- empty_state_no_recipes -->

    <string name="empty_state_title">No recipes found</string>
    <string name="empty_state_message">Add more ingredients and search again</string>

    <!-- RecipeDetailsActivity - other -->

    <string name="source_name_if_null">Click here to open the external site</string>

</resources>