<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="pl.kaemo.recipefinder.ui.recipeDetailsActivity.RecipeDetailsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ingredients_title_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/ingredients_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ingredients_title"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/switch_text_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/imperial"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Switch
                android:id="@+id/measures_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{() -> viewModel.onMetricSwitchClicked()}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/switch_text_right"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/switch_text_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/metric"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/measures_switch"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/ingredients_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@{viewModel.ingredientsList}"
            android:lineSpacingExtra="5sp"
            android:padding="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ingredients_title_layout"
            tools:text="* ¼ tsp black pepper\n* ¼ tsp black pepper\n* ¼ tsp black pepper\n* ¼ tsp black pepper" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>