<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ECEBEB"
    android:padding="20dp"
    tools:context=".UI.MainActivity.MainActivity">

    <!-- Top text -->

    <TextView
        android:id="@+id/main_activity_mainText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_activity_mainText"
        android:textAlignment="center"
        android:textColor="#333333"
        android:textSize="55sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Input field -->

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/main_activity_textInputLayout"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="28dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_activity_mainText" />

    <ImageButton
        android:id="@+id/main_activity_imageButton_add"
        android:layout_width="40dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@android:color/transparent"
        android:importantForAccessibility="no"
        app:layout_constraintBottom_toBottomOf="@+id/main_activity_textInputLayout"
        app:layout_constraintEnd_toEndOf="@+id/main_activity_textInputLayout"
        app:layout_constraintTop_toTopOf="@+id/main_activity_textInputLayout"
        app:srcCompat="@drawable/ic_baseline_add_box_24" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/textInputEditText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/main_activity_inputHintText"
        app:layout_constraintBottom_toBottomOf="@+id/main_activity_textInputLayout"
        app:layout_constraintEnd_toStartOf="@+id/main_activity_imageButton_add"
        app:layout_constraintStart_toStartOf="@+id/main_activity_textInputLayout"
        app:layout_constraintTop_toTopOf="@+id/main_activity_textInputLayout" />

    <!-- Recycler view -->

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/main_activity_recyclerview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/main_activity_button_findmeal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_activity_textInputLayout" />

    <!-- Bottom button -->

    <Button
        android:id="@+id/main_activity_button_findmeal"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:backgroundTint="#377D3F"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/main_activity_buttonFindMeal"
        android:textAllCaps="false"
        android:textSize="24sp"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>